add post name "content"

--- a/views/new.erb
+++ b/views/new.erb
@@ -1,8 +1,8 @@
-<h2>Add New Post</h2>
+<h2>Написать новый пост</h2>
 <p>
 	<form action="/new" method="POST" role="form">
-	  <textarea class="form-control" rows="6"></textarea>
+	  <textarea name="content" class="form-control" rows="6" style="width: 400px" placeholder="Введите свой текст"></textarea>
 	  <br />
-	  <button type="submit" class="btn btn-primary">Submit</button>
+	  <button type="submit" class="btn btn-primary">Отправить</button>
 	</form>
 </p>
