--- a/views/layout.erb
+++ b/views/layout.erb
@@ -29,8 +29,8 @@
 			  </div>
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
-			      <li><a href="/">Posts</a></li>
-			      <li><a href="/New">New post</a></li>
+			      <li><a href="/">Посты</a></li>
+			      <li><a href="/New">Новый пост</a></li>
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
