--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,11 @@
 	<p>
 		<%= post['content'] %>
 		<br />
+		<br />
 		Добавлено: <%= post['created_date'] %>
+		<br />
+		<br />
+		<a href="/details/<%= post['id'] %>">Комментарии</a>
 	</p>
 	<hr />
 <% end %>
