--- a/views/details.erb
+++ b/views/details.erb
@@ -8,6 +8,16 @@
 </p>
 <br />
 <h4>Комментарии:</h4>
+
+<% @comments.each do |comment| %>
+
+	<p>
+		<%= comment['content'] %>
+	</p>
+<% end %>
+
+
+
 <p>
 	<form action="/details/<%= @row['id'] %>" method="POST" role="form">
 	  <textarea name="content" class="form-control" rows="6" style="width: 400px" placeholder="Введите свой текст"></textarea>
